--- a/userInfo.html
+++ b/userInfo.html
@@ -27,6 +27,8 @@
 <script type="text/javascript" src="js/bootstrap-table.js"></script>
 <!-- Latest compiled and minified Locales -->
 <script type="text/javascript" src="js/bootstrap-table-zh-CN.js"></script>
+<!-- font-awesome -->
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
 
 <script type="text/javascript">
 // function power(obj,x){
