--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 					        <button class="btn btn-default item-searchBtn" type="button">高级搜索</button>
 					    </span> -->
 					    <div class="input-group-btn">
-					        <button type="button" class="btn btn-default searchBtn"><i class="searchBtn-icon"></i></button>
+					        <button type="button" class="btn btn-default searchBtn searchBtn-icon1"><i class="searchBtn-icon"></i></button>
 					        <button type="button" class="btn btn-default item-searchBtn" id="alarmSearchBtn2">高级搜索</button>
 					   	</div>
 					</div>
@@ -169,7 +169,7 @@
 					<div class="input-group">
 						<input type="text" id="item-search1" class="form-control item-search" placeholder="搜索"/>
 					    <div class="input-group-btn">
-					        <button type="button" class="btn btn-default searchBtn"><i class="searchBtn-icon"></i></button>
+					        <button type="button" class="btn btn-default searchBtn searchBtn-icon2"><i class="searchBtn-icon"></i></button>
 					        <button type="button" class="btn btn-default item-searchBtn" id="alarmSearchBtn">高级搜索</button>
 					   	</div>
 					</div>
@@ -525,14 +525,14 @@
 		</div>
 	</div>	
 	<!-- search result -->
-	<div class="search-result">
+	<div class="search-result" id="search-result1">
 		<div class="search-result-tittle"><a class="returnPanelBtn pull-left"><i class="returnPanel"></i></a>搜索结果<i class="prompt-num">100人</i></div>
 		<div class="preson-item-serach">
 			<div class="input-group">	
 				<input type="text" id="item-search1" class="form-control item-search" placeholder="搜索"/>
 				<div class="input-group-btn">
-				    <button type="button" class="btn btn-default searchBtn"><i class="searchBtn-icon"></i></button>
-				    <button type="button" class="btn btn-default item-searchBtn resultBtn-search">高级搜索</button>
+				    <button type="button" class="btn btn-default searchBtn searchBtn-icon1"><i class="searchBtn-icon"></i></button>
+				    <button type="button" class="btn btn-default item-searchBtn resultBtn-search" id="alarmSearch3">高级搜索</button>
 				</div>
 			</div>
 		</div>
@@ -556,87 +556,6 @@
 			        	</div>
 		        	</a>
 				</li>
-				<li>
-		        	<a href="javascript:;">
-			        	<img class="pull-left object-img" src="images/Object.png"/>
-			        	<div class="pull-right objectView">
-				        	<p class="userlist1"><span class="object-name">Cole Mphr</span><i class="red">3</i><span class="pull-right"><i class="GPS-icon GPS-icon-0"></i><span class="battery">5%</span><i class="power power-5"></i><i class="star"></i></span></p>
-				        	<p class="userlist2"><span class="object-state green">矫正中</span><span class="outdate">剩余30天</span><span class="pull-right address">皂君庙</span></p>
-			        	</div>
-		        	</a>
-				</li><li>
-		        	<a href="javascript:;">
-			        	<img class="pull-left object-img" src="images/Object.png"/>
-			        	<div class="pull-right objectView">
-				        	<p class="userlist1"><span class="object-name">Cole Mphr</span><i class="red">3</i><span class="pull-right"><i class="GPS-icon GPS-icon-0"></i><span class="battery">5%</span><i class="power power-5"></i><i class="star"></i></span></p>
-				        	<p class="userlist2"><span class="object-state green">矫正中</span><span class="outdate">剩余30天</span><span class="pull-right address">皂君庙</span></p>
-			        	</div>
-		        	</a>
-				</li><li>
-		        	<a href="javascript:;">
-			        	<img class="pull-left object-img" src="images/Object.png"/>
-			        	<div class="pull-right objectView">
-				        	<p class="userlist1"><span class="object-name">Cole Mphr</span><i class="red">3</i><span class="pull-right"><i class="GPS-icon GPS-icon-0"></i><span class="battery">5%</span><i class="power power-5"></i><i class="star"></i></span></p>
-				        	<p class="userlist2"><span class="object-state green">矫正中</span><span class="outdate">剩余30天</span><span class="pull-right address">皂君庙</span></p>
-			        	</div>
-		        	</a>
-				</li><li>
-		        	<a href="javascript:;">
-			        	<img class="pull-left object-img" src="images/Object.png"/>
-			        	<div class="pull-right objectView">
-				        	<p class="userlist1"><span class="object-name">Cole Mphr</span><i class="red">3</i><span class="pull-right"><i class="GPS-icon GPS-icon-0"></i><span class="battery">5%</span><i class="power power-5"></i><i class="star"></i></span></p>
-				        	<p class="userlist2"><span class="object-state green">矫正中</span><span class="outdate">剩余30天</span><span class="pull-right address">皂君庙</span></p>
-			        	</div>
-		        	</a>
-				</li><li>
-		        	<a href="javascript:;">
-			        	<img class="pull-left object-img" src="images/Object.png"/>
-			        	<div class="pull-right objectView">
-				        	<p class="userlist1"><span class="object-name">Cole Mphr</span><i class="red">3</i><span class="pull-right"><i class="GPS-icon GPS-icon-0"></i><span class="battery">5%</span><i class="power power-5"></i><i class="star"></i></span></p>
-				        	<p class="userlist2"><span class="object-state green">矫正中</span><span class="outdate">剩余30天</span><span class="pull-right address">皂君庙</span></p>
-			        	</div>
-		        	</a>
-				</li><li>
-		        	<a href="javascript:;">
-			        	<img class="pull-left object-img" src="images/Object.png"/>
-			        	<div class="pull-right objectView">
-				        	<p class="userlist1"><span class="object-name">Cole Mphr</span><i class="red">3</i><span class="pull-right"><i class="GPS-icon GPS-icon-0"></i><span class="battery">5%</span><i class="power power-5"></i><i class="star"></i></span></p>
-				        	<p class="userlist2"><span class="object-state green">矫正中</span><span class="outdate">剩余30天</span><span class="pull-right address">皂君庙</span></p>
-			        	</div>
-		        	</a>
-				</li><li>
-		        	<a href="javascript:;">
-			        	<img class="pull-left object-img" src="images/Object.png"/>
-			        	<div class="pull-right objectView">
-				        	<p class="userlist1"><span class="object-name">Cole Mphr</span><i class="red">3</i><span class="pull-right"><i class="GPS-icon GPS-icon-0"></i><span class="battery">5%</span><i class="power power-5"></i><i class="star"></i></span></p>
-				        	<p class="userlist2"><span class="object-state green">矫正中</span><span class="outdate">剩余30天</span><span class="pull-right address">皂君庙</span></p>
-			        	</div>
-		        	</a>
-				</li><li>
-		        	<a href="javascript:;">
-			        	<img class="pull-left object-img" src="images/Object.png"/>
-			        	<div class="pull-right objectView">
-				        	<p class="userlist1"><span class="object-name">Cole Mphr</span><i class="red">3</i><span class="pull-right"><i class="GPS-icon GPS-icon-0"></i><span class="battery">5%</span><i class="power power-5"></i><i class="star"></i></span></p>
-				        	<p class="userlist2"><span class="object-state green">矫正中</span><span class="outdate">剩余30天</span><span class="pull-right address">皂君庙</span></p>
-			        	</div>
-		        	</a>
-				</li><li>
-		        	<a href="javascript:;">
-			        	<img class="pull-left object-img" src="images/Object.png"/>
-			        	<div class="pull-right objectView">
-				        	<p class="userlist1"><span class="object-name">Cole Mphr</span><i class="red">3</i><span class="pull-right"><i class="GPS-icon GPS-icon-0"></i><span class="battery">5%</span><i class="power power-5"></i><i class="star"></i></span></p>
-				        	<p class="userlist2"><span class="object-state green">矫正中</span><span class="outdate">剩余30天</span><span class="pull-right address">皂君庙</span></p>
-			        	</div>
-		        	</a>
-				</li><li>
-		        	<a href="javascript:;">
-			        	<img class="pull-left object-img" src="images/Object.png"/>
-			        	<div class="pull-right objectView">
-				        	<p class="userlist1"><span class="object-name">Cole Mphr</span><i class="red">3</i><span class="pull-right"><i class="GPS-icon GPS-icon-0"></i><span class="battery">5%</span><i class="power power-5"></i><i class="star"></i></span></p>
-				        	<p class="userlist2"><span class="object-state green">矫正中</span><span class="outdate">剩余30天</span><span class="pull-right address">皂君庙</span></p>
-			        	</div>
-		        	</a>
-				</li>
 		    </ul>
 		</div>
 		<div class="pages clearfix">						
@@ -644,6 +563,114 @@
 			<div class="pull-right mp0"><span class="maxpage"></span><input class="jump-input" id="jump-input3"  type="text"/><a class="jump-btn jump-btn3">跳转</a></div>
 		</div>
 	</div>
+<!--  -->
+	<div class="search-result" id="search-result2">
+		<div class="search-result-tittle"><a class="returnPanelBtn pull-left"><i class="returnPanel"></i></a>搜索结果<i class="prompt-num">100人</i></div>
+		<div class="preson-item-serach">
+			<div class="input-group">	
+				<input type="text" id="item-search1" class="form-control item-search" placeholder="搜索"/>
+				<div class="input-group-btn">
+				    <button type="button" class="btn btn-default searchBtn searchBtn-icon2"><i class="searchBtn-icon"></i></button>
+				    <button type="button" class="btn btn-default item-searchBtn resultBtn-search" id="alarmSearch4">高级搜索</button>
+				</div>
+			</div>
+		</div>
+		<div class="preson-list2 tab-pane ">
+		    	<ul>
+		    		<li class="">
+		    			<a onclick="messageDetails(this)">
+		    				<img class="userPhoto pull-left " src="images/userObject.png"/>
+		    				<p class="messages"><span class="message-name ">Cole Mohr</span><span class="message-grade">一级</span><span class="message-state">紧急呼叫</span></p>
+		    				<p class="message-date">时间：<span>6.23 11：13：30</span></p>
+		    				<i class="messageClose pull-right"></i>
+		    			</a>
+		    			<div class="message-details">
+		    				<p class="pMargin">再某某地址产生紧急呼救告警</p>
+		    				<p class="row"><span class="col-xs-6">经度：</span><span class="col-xs-6">纬度：</span></p>
+		    				<p class="pMargin">矫正类型</p>
+		    				<p class="pMargin">执行单位名称执行单位名称执行单位名称</p>
+		    				<p class="btnsGroup"><a class="alertAlarmBtn">解除</a><a>推送ECU911</a><a>电话</a><a class="SMSBtn">短信</a><a>告警轨迹</a></p>
+		    			</div>
+					</li>
+		    		<li class="">
+		    			<a onclick="messageDetails(this)">
+		    				<img class="userPhoto pull-left " src="images/userObject.png"/>
+		    				<p class="messages"><span class="message-name ">Cole Mohr</span><span class="message-grade">一级</span><span class="message-state">紧急呼叫</span></p>
+		    				<p class="message-date">时间：<span>6.23 11：13：30</span></p>
+		    				<i class="messageClose pull-right"></i>
+		    			</a>
+		    			<div class="message-details">
+		    				<p class="pMargin">再某某地址产生紧急呼救告警</p>
+		    				<p class="row"><span class="col-xs-6">经度：</span><span class="col-xs-6">纬度：</span></p>
+		    				<p class="pMargin">矫正类型</p>
+		    				<p class="pMargin">执行单位名称执行单位名称执行单位名称</p>
+		    				<p class="btnsGroup"><a class="alertAlarmBtn">解除</a><a>推送ECU911</a><a>电话</a><a class="SMSBtn">短信</a><a>告警轨迹</a></p>
+		    			</div>
+					</li>
+					<li class="">
+		    			<a onclick="messageDetails(this)">
+		    				<img class="userPhoto pull-left " src="images/userObject.png"/>
+		    				<p class="messages"><span class="message-name ">Cole Mohr</span><span class="message-grade">一级</span><span class="message-state">紧急呼叫</span></p>
+		    				<p class="message-date">时间：<span>6.23 11：13：30</span></p>
+		    				<i class="messageClose pull-right"></i>
+		    			</a>
+		    			<div class="message-details">
+		    				<p class="pMargin">再某某地址产生紧急呼救告警</p>
+		    				<p class="row"><span class="col-xs-6">经度：</span><span class="col-xs-6">纬度：</span></p>
+		    				<p class="pMargin">矫正类型</p>
+		    				<p class="pMargin">执行单位名称执行单位名称执行单位名称</p>
+		    				<p class="btnsGroup"><a class="alertAlarmBtn">解除</a><a>推送ECU911</a><a>电话</a><a class="SMSBtn">短信</a><a>告警轨迹</a></p>
+		    			</div>
+					</li>				
+		    	</ul>
+		</div>
+		<div class="pages clearfix">						
+			<div class="pull-left page" id="pages4"></div>
+			<div class="pull-right mp0"><span class="maxpage"></span><input class="jump-input" id="jump-input4"  type="text"/><a class="jump-btn jump-btn4">跳转</a></div>
+		</div>
+	</div>
+	<!--  -->
+	<div class="group-management">
+		<div class="group-management-head">我的分组管理</div>
+		<div class="group-management-left">
+			<div class="group-btns">
+				<a >新建分组</a>
+				<a href="javascript:void(0);" id="newName">重命名</a>
+				<a >删除分组</a>
+			</div>
+			<div class="group-groups" id="group-groups">
+				<ul>
+					<li onclick="active(this,event)"><div class="text">新建分组1</div><input class="input" type="text"></li>
+					<li onclick="active(this,event)"><div class="text">新建分组2</div><input class="input" type="text"></li>
+					<li onclick="active(this,event)"><div class="text">新建分组3</div><input class="input" type="text"></li>
+					<li onclick="active(this,event)"><div class="text">新建分组4</div><input class="input" type="text"></li>
+				</ul>
+			</div>
+		</div>
+		<div class="group-management-right"></div>
+	</div>
+	<link rel="stylesheet" type="text/css" href="less/group-management.css">
+	<script type="text/javascript">
+		$('#newName').click(function(event){//重命名
+			$('#group-groups ul li.active .input').val($('#group-groups ul li.active .text').text());
+			$('#group-groups ul li.active .text').hide();
+			$('#group-groups ul li.active .input').show();
+			event.stopPropagation();
+		});
+		$(window).click(function(event){ //缺少val值的判断 <=写到这里了！
+			$('#group-groups ul li.active .text').text($('#group-groups ul li.active .input').val());
+			$('#group-groups ul li.active .text').show();
+			$('#group-groups ul li.active .input').hide();
+			$('#group-groups ul li.active').removeClass('active');
+			event.stopPropagation();
+		});
+		function active(obj,event){//点击选中
+			console.log($(obj));
+			$(obj).parent('ul').children('li').removeClass('active');
+			$(obj).addClass('active');
+			event.stopPropagation();
+		};
+	</script>
 	<!--  -->
 	<div id="app">
 		<div id="maps">
